--- a/index.jade
+++ b/index.jade
@@ -1,5 +1,11 @@
-link(href="app.css" type="text/css" rel="stylesheet")
-svg#svg
-script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js").
-script(src="snap.svg-min.js").
-script(src="app.js").
+doctype
+html(lang="en")
+  head
+    title Cool stuff
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
+    link(href="app.css" type="text/css" rel="stylesheet")
+  body
+    svg#svg
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js").
+    script(src="snap.svg-min.js").
+    script(src="app.js").
