--- a/index.jade
+++ b/index.jade
@@ -6,10 +6,13 @@ html(lang="en")
     link(href="app.css" type="text/css" rel="stylesheet")
   body
     svg#svg
+    .madeby
+      p A visual experiment by <a href="http://twitter.com/jorgepedret" target="_blank">Jorge Pedret</a> &amp; <a href="http://twitter.com/EleniFragkouli" target="_blank">Eleni Fragkouli</a>.
+      br
+      p: a(href="https://github.com/jorgepedret/triangles-experiment" target="_blank") View Project on Github &rarr;
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js").
     script(src="snap.svg-min.js").
-    script(src="app.js").
-    script.
+    script(src="app.js").    script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
