--- a/index.jade
+++ b/index.jade
@@ -4,14 +4,7 @@ html(lang="en")
     title Random Triangle
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     link(href="app.css" type="text/css" rel="stylesheet")
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-49241744-1', 'harp.io');
-      ga('send', 'pageview');
+    script(src='/js/analytics.js')
   body
     svg#svg
     .madeby
