--- a/index.jade
+++ b/index.jade
@@ -4,13 +4,23 @@ html(lang="en")
     title Random Triangle
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     link(href="app.css" type="text/css" rel="stylesheet")
-    script(src='/js/analytics.js')
+    script.
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     ga('create', 'UA-49241744-1', 'harp.io');
+     ga('send', 'pageview');
   body
     svg#svg
     .madeby
+      //- p: a.js-dowload(href="#") Download
       p A visual experiment by <a href="http://twitter.com/jorgepedret" target="_blank">Jorge Pedret</a> &amp; <a href="http://twitter.com/EleniFragkouli" target="_blank">Eleni Fragkouli</a>.
       br
       p: a(href="https://github.com/jorgepedret/triangles-experiment" target="_blank") View Project on Github &rarr;
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js").
     script(src="snap.svg-min.js").
+    //- script(type='text/javascript' src='http://canvg.googlecode.com/svn/trunk/rgbcolor.js').
+    //- script(type='text/javascript' src='http://canvg.googlecode.com/svn/trunk/StackBlur.js').
+    //- script(type='text/javascript' src='http://canvg.googlecode.com/svn/trunk/canvg.js').
     script(src="app.js").
