--- a/app.styl
+++ b/app.styl
@@ -20,7 +20,7 @@ a
   position absolute
   bottom 0
   right 5px
-  text-align right
+  text-align center
   width 100%
   font-size .75em
   pointer-events none
